feat: support non jms message body for JSONRecordBuilder
Signed-off-by: Joel Hanson <joelhanson025@gmail.com>